# MagpieAuth

./: .gitignore  LICENSE  README-zh.md  README.md  index.html  package-lock.json  package.json  test.js  test.mjs  totp_error.txt  tsconfig.json  vite.config.ts
browser-extension/: manifest.json
browser-extension/background/: service-worker.js
browser-extension/icons/: generate-icons.html
browser-extension/lib/: api-client.js  pattern-lock.js
browser-extension/popup/: popup.css  popup.html  popup.js
docs/: 01_PRD_Requirements.md  02_Architecture_Design.md  03_Data_Schema.md  04_Security_Spec.md  05_UI_UX_Design.md  SEC_Analyze.md
docs/superpowers/specs/: 2026-05-27-security-deep-audit-design.md
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  err.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  crypto.rs  db.rs  http_auth.rs  http_server.rs  lib.rs  main.rs  security.rs  totp.rs
src/components/: AddEditDialog.tsx  CloseConfirmDialog.tsx  DetailDrawer.tsx  ExportImportDialog.tsx  Header.tsx  LabelManager.tsx  LockScreen.tsx  PatternLock.tsx  PatternSetupDialog.tsx  QrScannerDialog.tsx  SettingsPanel.tsx  SetupWizard.tsx  TitleBar.tsx  TotpDisplay.tsx  VaultList.tsx
src/hooks/: useIdleLock.ts  useTheme.tsx
src/lib/: passwordStrength.ts  tauri-api.ts  utils.ts
