[package]
name = "magpieauth"
version = "1.3.1"
description = "MagpieAuth - Lightweight Local Password & 2FA Manager"
authors = ["you"]
edition = "2021"
default-run = "magpieauth"

[lib]
name = "magpieauth_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base32 = "0.5"
chrono = "0.4"
dirs = "5"
thiserror = "1"
futures = "0.3"
hex = "0.4.3"
tauri-plugin-global-shortcut = "2.0.0"
keyring = "3.6.3"
base64 = "0.22.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["net"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Security_Credentials_UI",
    "Win32_Security_Cryptography",
    "Win32_System_WinRT",
    "Win32_Foundation",
    "Foundation",
] }
